reactwithasp.client/src/App.css
/* ======================================================== */
/* =============     SMALLER THAN xs      ================= */
/* ======================================================== */
/*
  I have defined a custom breakpoint to allow xxs for some items.
  For these styles, the default is xxs.
  For all other styles the default breakpoint means xs.
  BEGINNING OF ABSOLUTE SMALLEST
*/

#root {
  /*max-width: 1280px;*/
  margin: 0 auto;
  text-align: center;
}

.lime{
  /*background-color:lime!important;*/
}

.vl {
  display: none;
}
.mg-category-menu-r.btn-group-vertical a {
  text-align: left;
  border-radius: 0px;
}
.mg-category-menu-r {
  /*border: 3px dashed cyan;*/
  width: 100%;
}
.cartQtyXXs{
  /*color:red;*/
  display:block!important;
}
.cartQtyXs {
  /*color: orange;*/
  display: none !important;
}

/* ADMIN LOGIN PAGE */
.mgGoogleTokenErrSpan.d-block {
  text-align: left;
  font-size: 12px;
  max-width: 173px;
  padding-bottom: 11px;
}
.mgGoogleTokenErrSpan.d-sm-block {
  text-align: right;
  font-size: 12px;
  max-width: 195px;
}
.mg-admin-login-form .btn {
  font-size: 12px;
}
.mg-admin-login-form input {
  font-size: 12px;
}
.bi-wrench {
  font-size: 20px;
}
.mg-construction-red {
  font-size: 12px;
  background-color: #ffcfcf;
  height: 40px;
  border: 2px solid #ffdccf;
  border-right: none;
  border-left: none;
  display: flex;
  flex-direction: row;
  align-items: anchor-center;
  justify-content: center;
  color: #b33111;
  background: repeating-linear-gradient( 45deg, #fffbef, #fffbef 10px, #ffebd7 10px, #ffebd7 20px );
}
.mgNavLinkBtn {
  text-decoration: none;
  box-sizing: border-box;
  cursor: pointer;
  padding: 12px;
  font-size: 12px;
}
.mgNavLinkBtn.mgNavLinkCartBtn {
  color: white;
  padding-top: 6px;
  padding-bottom: 6px;
  background-color: rgb(25, 135, 84);
  border-color: rgb(25, 135, 84);
  border-radius: 6px;
  font-size: 12px;
}
.mgNavLinkBtn.mgNavLinkCartBtn:hover {
  color: white;
  background-color: rgb(21, 115, 71);
}
.mgCurrUserNav {
  color: white;
  font-weight: 600;
  flex-grow: 2;
  text-align: right;
  font-size: 12px;
  display:flex;
  flex-direction:column;
  justify-content:flex-start;
  align-items:flex-start;
}

@media (min-width: 370px) {
  /* BEGINING OF INTERMEDIATE SIZE */
  .mg-category-menu-r {
    /*border: 3px dashed magenta;*/
    display:flex;
    width: 100%;
  }
  .cartQtyXXs {
    /*color: unset;*/
    display:none!important;
  }
  .cartQtyXs {
    /*color: orange;*/
    display: block !important;
  }

  /* ADMIN LOGIN PAGE */
  .mg-admin-login-form .btn {
    font-size: 15px;
  }
  .mg-admin-login-form input {
    font-size: 15px;
  }
  .mg-construction-red {
    font-size:16px;
  }
  .bi-wrench {
    font-size: 24px;
  }
  .mgNavLinkBtn {
    font-size: 14px;
  }
  .mgNavLinkBtn.mgNavLinkCartBtn {
    font-size: 14px;
  }
  .mgCurrUserNav {
    font-size: 14px;
  }
}

/* ======================================================== */
/* =============    DEFAULT BREAKPOINT: xs  =============== */
/* ======================================================== */
/* xs */
/* Extra small devices (portrait phones, less than 576px) */
/* No media query for `xs` since this is the default in Bootstrap */

.storeBrand {
  font-weight: 500;
  font-size: 20px;
  text-decoration: none;
  color: white;
  padding-right: 15px;
  margin-top: -4px;
}
.responsiveScrollsRight {
  font-size: 12px;
  color: #505050;
}

#adminLayout nav{
  padding-left:20px;
  padding-right:10px;
}

#adminLayout {
  /* This must be at least 12px or we get a funny overscroll behaviour on the right hand side, for Admin Orders page. */
  padding-left: 12px;
  padding-right: 12px;
}
#adminLayout table{
  font-size:12px;
}
#adminLayout td{
  padding:1px;
  padding-top: 6px;
  padding-bottom: 6px;
  white-space: nowrap;
}

.mg-nav-items {
  /*border:3px dashed magenta;*/
  align-items: flex-start;
  width: 100%;
}

tr:nth-child(even) {
    background: #F2F2F2;
}

tr:nth-child(odd) {
    background: #FFF;
}

th, td {
    padding-left: 1rem;
    padding-right: 1rem;
}

.searchXBtn:hover {
  background-color: #7bbb9d;
  cursor:pointer;
}
.searchXBtn:active {
  background-color: #21de87;
  cursor: pointer;
}


/* PRODUCT TITLE, SLUG, AND CART BUTTONS. HAS SOME PADDING */
.inStockProductCanAdd {
  border: 1px solid lightgray;
  border-radius: 5px;
  margin-top: 13px;
  margin-bottom: 13px;
  padding: 10px;
}
/* PRODUCT TITLE, SLUG, AND CART BUTTONS */
.inStockProductCanAdd .productDetailsFlex{
  /*border: 2px dashed red;*/
  padding-left: 0px;
  padding-right: 0px;
}
/* PRODUCT TITLE AND SLUG */
.inStockProductCanAdd .productDetailsFlex .productDetails {
  /*border: 4px dashed cornflowerblue;*/
  display:block;
  text-align:left;
  overflow-y:hidden;
  /*width:410px;*/
  overflow-x:hidden;
}
/* PRODUCT SLUG */
.inStockProductCanAdd .productDetailsFlex .productDetails span {
  /*border: 2px dashed mediumseagreen;*/
  /*background-color: lightgreen;*/
  font-size: 12px;
}
.inStockProductCanAdd .productDetailsFlex .productDetails .inStockPrice {
  padding-left: 2px;
  font-size: 18px;
  color: #75a9da;
  font-weight: 500;
}


.flexContAddToCart {
  /*border: 2px dashed lightblue;*/
  /*background-color: #5f7ba5;*/
  display:flex;
  flex-direction:column;
  justify-content:flex-end;
}
/*.flexContAddToCart {
  border: 1px dashed darkseagreen;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin-top: 6px;
  overflow:hidden;
}*/
/* ADD TO CART BUTTON */
.inStockProductCanAdd .productDetailsFlex .btn-group {
  /*border: 3px dashed orange;*/
  height:38px;
  min-width:100px;
  font-size:13px;
  align-self: flex-end;
}
.inStockProductCanAdd .productDetailsFlex button {
  font-size:10px;
}
/* QTY IN CART PREVIEW BUTTON */
.addToCartBtnGroup button {
  /*border: 2px solid #b2dcc5;*/
}
.currentlyAdded:disabled {
  background-color:white;
  border: 1px solid #e9f6ef !important;
  width: 42px;
  font-size: 11px;
  font-weight: 700;
  color: #252525;
  padding-top: 7px;
  margin-right: 2px;
}
.currentlyAdded:disabled:hover{
  background-color:white;
  border: 1px solid #e9f6ef;
  color:black;
}

/* CART STYLES */
.proceedCheckoutBar{
  margin-top: 15px;
  margin-bottom: 5px;
}
.proceedCheckoutBar .btn {
  font-size: 13px;
}
.cartContents {
  /*border: 1px solid red;*/
  border-radius: 5px;
}
.inCartProd{
  /*border: 2px dashed gold;*/
  display:flex;
  justify-content:center;
  
  border-radius: 5px;
  
  margin-top: 5px;
  margin-bottom: 5px;
}
.inCartProd .innerRow{
  border: 1px solid lightgrey;
  /*max-width:450px;*/
  width: 100%;
  border-radius: 5px;
  padding: 10px;
  padding-right:0px;
  padding-left:0px;
}
.innerRow div{
  /*border: 1px dashed lime;*/
}
.inCartProd button {
  /*border: 3px dashed red;*/
  float: right;
  width: 85px;
  font-size: 14px;
}
.inCartItemText {
  text-align: left;
}
.inCartItemText p{
  font-size:13px;
}
.inCartItemRemove{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-end;
}
.inCartItemRemove .btn-group{
  max-width:130px;
}
.inCartItemRemove .btn-group button{
  /*min-width:30px;*/
}
.inCartItemRemove .btn-group button:disabled{
  background-color:red !important;
}
.cartLineSubInfoBottom {
  color: #637183;
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: flex-end;
  padding-bottom: 4px;
  padding-left: 0px;
  font-size: 12px;
}
.fetchErr {
  color: #4695eb;
  margin-top: 10px;
  margin-bottom: 10px;
  text-align: center;
  padding: 15px;
  background-color: #e7f7ff;
  border-radius: 10px;
}


/* CHECKOUT STYLES */
.checkoutLines .shipHeading{
  width: 100%;
  text-align:left;
  padding-left:5px;
  margin-top:25px;
}
.checkoutSubmitBtnGroup .btn {
  font-size:14px;
}

/* ADMIN LOGIN PAGE */
.mg-admin-login-form {
  margin-top: 30px;
  margin-bottom: 50px;
  max-width: 600px;
}

/* ================================================= */
/* ========= OTHER BREAKPOINTS BELOW HERE ========== */
/* ================================================= */
/* sm */
/* Small devices (landscape phones, 576px and up) */

@media (min-width: 576px) {

  .vl {
    border-left: 1px solid rgb(65 93 135);
    display: inline-block;
    margin-left: 3px;
    /*background-color: darkslategrey;*/
    width: 2px;
  }

  .mg-nav-items {
    /*border: 3px dashed purple;*/
    align-items: center;
  }
  .mg-category-menu-r {
    /*border: 3px dashed purple;*/
    width: 100%;
  }
  .proceedCheckoutBar .btn {
    font-size: 15px;
  }
  .cartQtyXs {
    /*color: orange;*/
    display: none !important;
  }
  .checkoutSubmitBtnGroup .btn {
    font-size: 18px;
  }
  .mgNavLinkBtn {
    font-size: 14px;
  }
  .mgNavLinkBtn.mgNavLinkCartBtn {
    font-size: 14px;
  }
  .mgCurrUserNav {
    font-size: 14px;
    flex-direction: row;
    justify-content:flex-end;
  }
}

/* ================================================= */
/* =========            MEDIUM            ========== */
/* ================================================= */

@media (min-width: 768px)
{
  .mgNavLinkBtn {
    font-size: 16px;
  }
  .mgNavLinkBtn.mgNavLinkCartBtn {
    font-size: 16px;
  }
  .mgCurrUserNav {
    font-size: 16px;
  }
}

